Before second protection attempt. Fixed wrap of goods-item

--- a/css/style.css
+++ b/css/style.css
@@ -1465,14 +1465,15 @@ fieldset {
 /* стилизация карточки товара  */
 
 .catalog-items {
-  width:700px;
-  margin:20px auto;
+  width: 965px;
+  margin: 20px auto;
 }
 
 .goods-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: 20px;
 }
 
@@ -1722,7 +1723,6 @@ fieldset {
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
